--- a/help_me_out/src/home.css
+++ b/help_me_out/src/home.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Sora:wght@600;700&family=Work+Sans:wght@400;500&display=swap');
 
-/* Define color variables */
 :root {
   --color1: rgba(0, 0, 0, 1);
   --color2: rgba(18, 11, 72, 1);
@@ -9,7 +8,7 @@
   --color5: rgba(97, 97, 99, 1);
   --color6: rgba(244, 246, 248, 1);
   --color7: rgba(20, 20, 20, 1);
-}s
+}
 
 .header {
   display: flex;
@@ -27,7 +26,7 @@
   padding: 0;
 }
 
-.logo > h3 {
+.logo-text {
   font-family: Inter;
   font-weight: 700;
   font-size: 16px;
@@ -69,7 +68,6 @@
 }
 
 .hero {
-  margin-top: 2px;
   display: flex;
   padding: 4rem;
   padding-top: 10rem;
@@ -107,11 +105,20 @@
 .image-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  margin-left: 2rem;
+  padding-left: 2rem;
+  margin: 2rem;
+  gap: 1rem;
 }
-
-.image-grid > img {
+.image-container{
+    max-width: 100%;
+}
+.image-container > img {
   border-radius: 1rem;
+  width: 100%;
+  height: auto;
+}
+.gridright>img,.gridleft>img{
+    border-radius: 0rem;
 }
 
 .gridright {
@@ -229,7 +236,7 @@
   align-items: center;
 }
 
-.step-item > div {
+.step-icon{
   background-color: var(--color2);
   padding: 14px 26px;
   border-radius: 60px;
@@ -296,4 +303,32 @@ footer {
   letter-spacing: 0em;
   text-align: left;
   color: var(--color3);
+}
+@media (max-width:1139px) {
+    
+    .hero{
+        flex-direction: column;
+        padding: 4rem;
+    }
+    .image-grid {
+        margin: 0;
+        margin-top: 5rem;
+      }
+    .features-content {
+        display: flex;
+        flex-direction: column;
+      }
+      
+    .videoRepository {
+        margin-top: 2rem;
+    }
+    .steps-grid  {
+    grid-template-columns: 1fr;
+    }
+    footer {
+      grid-template-columns: 1fr;
+      padding: 98px 130px;
+      background-color: var(--color2);
+    }
+      
 }
