added video detail page

--- a/help_me_out/src/home.css
+++ b/help_me_out/src/home.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Sora:wght@600;700&family=Work+Sans:wght@400;500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Manrope:wght@500&family=Sora:wght@600;700&family=Work+Sans:wght@400;500&display=swap');
 :root {
   --color1: rgba(0, 0, 0, 1);
   --color2: rgba(18, 11, 72, 1);
