--- a/help_me_out/src/repo.css
+++ b/help_me_out/src/repo.css
@@ -15,6 +15,17 @@
     align-items: center;
     justify-content: flex-end;
 }
+.nav-profile>p{
+    font-family: Work Sans;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 19px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: rgba(20, 20, 20, 1);
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
 .salutation>h1{
     font-family: Sora;
     font-size: 32px;
@@ -45,7 +56,7 @@
     outline: none;
     margin-left: 1rem;
     padding: 1rem;
-    background-color: rgba(231, 231, 237, 1);
+    background-color: rgba(231, 231, 237, 0);
     
 }
 .searchBar{
@@ -83,6 +94,11 @@
 .videoFrame{
    position: relative; 
 }
+
+.videoFrame>img{
+    width: 100%;
+    height: auto;
+ }
 .videoFrame>span{
     position: absolute;
     bottom: 1rem;
