added videoPreview Page

--- a/help_me_out/src/video.css
+++ b/help_me_out/src/video.css
@@ -82,6 +82,7 @@
     height: fit-content;
 }
 .urlShare>div{
+    min-width: 6rem;
     border: 1px solid rgba(18, 11, 72, 1);
     border-radius: 1rem;
     padding: 0.5rem;
